<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cloudsdale Mobile</string>
    <string name="app_display_name">Cloudsdale</string>
    <string name="cloudsdale_api_url">cloudsdale.org/v1/</string>
    <string name="cloudsdale_login_button_text">Cloudsdale</string>
    <string name="cloudsdale_login_password_field_text">Password</string>
    <string name="cloudsdale_login_submit_button_text">Login</string>
    <string name="cloudsdale_login_username_field_text">Email</string>
    <string name="facebook_dev_app_id">213007855430354</string>
    <string name="facebook_login_button_text">Facebook</string>
    <string name="main_view_spinner_prompt">Category</string>
    <string name="logon_logo_description_text">Cloudsdale logo</string>
    <string name="login_source_query">What would you like to login with?</string>
    <string name="twitter_login_button_text">Twitter</string>
    <string-array name="main_view_spinner_categories">
        <item>Clouds</item>
        <item>Subscriptions</item>
    </string-array>
    <string name="facebook_install_prompt">You need Facebook for this! Want to get it?</string>
    <string name="generic_positive_button">Yes</string>
    <string name="generic_negative_button">No</string>
    <string name="cloudsdale_dev_api_url">http://192.168.2.21:3000/v1/</string>
    <string name="login_text_seperator">or</string>

</resources>