<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <EditText
        android:id="@+id/cloudsdaleLoginUsernameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/cloudsdale_login_username_field_text"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cloudsdaleLoginPasswordField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cloudsdaleLoginUsernameField"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/cloudsdale_login_password_field_text" />

    <Button
        android:id="@+id/cloudsdaleLoginSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cloudsdaleLoginPasswordField"
        android:layout_margin="10dp"
        android:text="@string/cloudsdale_login_submit_button_text" />

</RelativeLayout>